# AbstractionLayer

./: .gitignore  AbstractionLayer.sln  LICENSE  README.md
AL/: Common.hpp
AL/APRS/: Client.hpp
AL/Algorithms/: CRC.hpp  FNV.hpp  Isaac.hpp
AL/Collections/: Array.hpp  ArrayList.hpp  BitSet.hpp  ByteBuffer.hpp  CircularQueue.hpp  Dictionary.hpp  EncryptedString.hpp  ICollection.hpp  IQueue.hpp  Iterator.hpp  KeyValuePair.hpp  LinkedList.hpp  MPSCQueue.hpp  Queue.hpp  Stack.hpp  String.hpp  StringBuilder.hpp  Tuple.hpp  UnorderedSet.hpp
AL/Common/: BaseConverter.hpp  BitConverter.hpp  BitMask.hpp  BitReader.hpp  CompilerNotSupportedException.hpp  Concepts.hpp  DateTime.hpp  DependencyMissingException.hpp  Endians.hpp  Event.hpp  Exception.hpp  Features.hpp  Function.hpp  GUID.hpp  HexConverter.hpp  Math.hpp  NotImplementedException.hpp  OperationNotSupportedException.hpp  PlatformNotSupportedException.hpp  Platforms.hpp  Regex.hpp  ScheduledEvent.hpp  String.hpp  StringBuilder.hpp  Time.hpp  TimeSpan.hpp  Timestamp.hpp  TypeTraits.hpp  Types.hpp  Utility.hpp
AL/Drawing/: Color.hpp  Colors.hpp  Rectangle.hpp  Size.hpp  Vector.hpp
AL/FileSystem/: CSVFile.hpp  Directory.hpp  File.hpp  INIFile.hpp  LogFile.hpp  Monitor.hpp  Path.hpp  TextFile.hpp  WaveFile.hpp
AL/Game/: Loop.hpp
AL/HTML/: Document.hpp
AL/Hardware/: COMPort.hpp  GPIO.hpp  I2C.hpp  InputDeviceState.hpp  Keyboard.hpp  Mouse.hpp  NetworkAdapter.hpp  SPI.hpp  UART.hpp  USB.hpp  USBDevice.hpp  WiFi.hpp
AL/Lua54/: Lua.hpp  LuaException.hpp  LuaExtensions.hpp
AL/Lua543/: Lua.hpp  LuaException.hpp  LuaExtensions.hpp
AL/MySQL/: Database.hpp  Exception.hpp
AL/Network/: Adapter.hpp  DNS.hpp  ErrorCode.hpp  IPAddress.hpp  ISocket.hpp  (+9 more)
AbstractionLayer/: AbstractionLayer.vcxproj  AbstractionLayer.vcxproj.filters  main.cpp
AbstractionLayer.DotNET/: AbstractionLayer.DotNET.vcxproj  Endians.cs  main.cpp
AbstractionLayer.DotNET.Forms/: AbstractionLayer.DotNET.Forms.csproj
AbstractionLayer.Lua/: AbstractionLayer.Lua.vcxproj  Makefile
Test/: Makefile  main.cpp
Test.Pico/: CMakeLists.txt  main.cpp
Test.PicoW/: CMakeLists.txt  main.cpp
(+433 files in other folders)
